# matrix

./: Cargo.toml  README.md  crates.js  docker-compose.yml  search-index.js  settings.html  source-files.js
.github/workflows/: on_merge.yml
dntk_matrix/: all.html  index.html  sidebar-items.js
dntk_matrix/heap/: index.html  sidebar-items.js  struct.Heaped.html
dntk_matrix/matrix/: fn.solve_eqn.html  index.html  sidebar-items.js  struct.Matrix.html
dntk_matrix/multi_dim/: index.html  sidebar-items.js  struct.MultiMatrix.html
docker/: Dockerfile
examples/: main.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js  trait.Into.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/arith/: trait.Add.js  trait.Mul.js  trait.Neg.js  trait.Sub.js
implementors/core/ops/index/: trait.Index.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: general_matrix.rs  heap.rs  lib.rs  main.rs  matrix.rs  multi_dim.rs
src/dntk_matrix/: heap.rs.html  lib.rs.html  matrix.rs.html  multi_dim.rs.html
