[package]
name = "dntk-matrix"
version = "0.1.0"
repository = "https://github.com/den-taku/matrix"
description = "Statically sized matrix using a definition with const generics (only for nightly)"
authors = ["DenTaku <dentaku1412@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["matrix"]

[dependencies]
num = "0.4.0"
